refactor: 카테고리 DTO 매핑